# andersen-trial-task

./: README.md  pyproject.toml  q1.py  q2.py  q3.py  q4.py  q5.py  q6.py  settlement_statement.csv  settlement_statement.json
securehealth/: __init__.py
securehealth/data/: __init__.py  fixtures.py
securehealth/models/: __init__.py  benefit.py  claim.py  enums.py  policy.py
securehealth/services/: __init__.py  adjudication.py  endorsement.py  settlement.py  stateful_adjudication.py
