[project]
name = "andersen-trial-task"
version = "0.1.0"
description = "SecureHealth insurance policy adjudication trial task"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["securehealth"]
